--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,6 @@ plugins {
     id 'java'
 }
 
-group 'org.example'
-version '1.0-SNAPSHOT'
-
 repositories {
     mavenCentral()
 }
@@ -16,6 +13,7 @@ dependencies {
             "io.github.bonigarcia:webdrivermanager:5.0.3",
             'org.aeonbits.owner:owner:1.0.4',
             'org.assertj:assertj-core:3.21.0',
+            'com.codeborne:selenide:5.21.0'
     )
     testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.8.2')
 }
